docs-archive/apache-airflow-providers-microsoft-azure/12.5.0/_sources/_api/airflow/providers/microsoft/azure/triggers/powerbi/index.rst.txt
airflow.providers.microsoft.azure.triggers.powerbi
==================================================

.. py:module:: airflow.providers.microsoft.azure.triggers.powerbi


Classes
-------

.. autoapisummary::

   airflow.providers.microsoft.azure.triggers.powerbi.PowerBITrigger
   airflow.providers.microsoft.azure.triggers.powerbi.PowerBIWorkspaceListTrigger
   airflow.providers.microsoft.azure.triggers.powerbi.PowerBIDatasetListTrigger


Module Contents
---------------

.. py:class:: PowerBITrigger(conn_id, dataset_id, group_id, timeout = 60 * 60 * 24 * 7, dataset_refresh_id = None, proxies = None, api_version = None, check_interval = 60, wait_for_termination = True, request_body = None)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   Triggers when Power BI dataset refresh is completed.

   Wait for termination will always be True.

   :param conn_id: The connection Id to connect to PowerBI.
   :param timeout: The HTTP timeout being used by the `KiotaRequestAdapter` (default is None).
       When no timeout is specified or set to None then there is no HTTP timeout on each request.
   :param proxies: A dict defining the HTTP proxies to be used (default is None).
   :param api_version: The API version of the Microsoft Graph API to be used (default is v1).
       You can pass an enum named APIVersion which has 2 possible members v1 and beta,
       or you can pass a string as `v1.0` or `beta`.
   :param dataset_id: The dataset Id to refresh.
   :param dataset_refresh_id: The dataset refresh Id to poll for the status, if not provided a new refresh will be triggered.
   :param group_id: The workspace Id where dataset is located.
   :param check_interval: Time in seconds to wait between each poll.
   :param wait_for_termination: Wait for the dataset refresh to complete or fail.
   :param request_body: Additional arguments to pass to the request body, as described in https://learn.microsoft.com/en-us/rest/api/power-bi/datasets/refresh-dataset-in-group#request-body.


   .. py:attribute:: hook


   .. py:attribute:: dataset_id


   .. py:attribute:: dataset_refresh_id
      :value: None



   .. py:attribute:: timeout
      :value: 604800



   .. py:attribute:: group_id


   .. py:attribute:: check_interval
      :value: 60



   .. py:attribute:: wait_for_termination
      :value: True



   .. py:attribute:: request_body
      :value: None



   .. py:method:: serialize()

      Serialize the trigger instance.



   .. py:property:: conn_id
      :type: str



   .. py:property:: proxies
      :type: dict | None



   .. py:property:: api_version
      :type: msgraph_core.APIVersion | str



   .. py:method:: run()
      :async:


      Make async connection to the PowerBI and polls for the dataset refresh status.



.. py:class:: PowerBIWorkspaceListTrigger(conn_id, workspace_ids = None, timeout = 60 * 60 * 24 * 7, proxies = None, api_version = None)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   Triggers a call to the API to request the available workspace IDs.

   :param conn_id: The connection Id to connect to PowerBI.
   :param timeout: The HTTP timeout being used by the `KiotaRequestAdapter`. Default is 1 week (60s * 60m * 24h * 7d).
       When no timeout is specified or set to None then there is no HTTP timeout on each request.
   :param proxies: A dict defining the HTTP proxies to be used (default is None).
   :param api_version: The API version of the Microsoft Graph API to be used (default is v1).
       You can pass an enum named APIVersion which has 2 possible members v1 and beta,
       or you can pass a string as `v1.0` or `beta`.


   .. py:attribute:: hook


   .. py:attribute:: timeout
      :value: 604800



   .. py:attribute:: workspace_ids
      :value: None



   .. py:method:: serialize()

      Serialize the trigger instance.



   .. py:property:: conn_id
      :type: str



   .. py:property:: proxies
      :type: dict | None



   .. py:property:: api_version
      :type: msgraph_core.APIVersion | str



   .. py:method:: run()
      :async:


      Make async connection to the PowerBI and polls for the list of workspace IDs.



.. py:class:: PowerBIDatasetListTrigger(conn_id, group_id, dataset_ids = None, timeout = 60 * 60 * 24 * 7, proxies = None, api_version = None)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   Triggers a call to the API to request the available dataset IDs.

   :param conn_id: The connection Id to connect to PowerBI.
   :param group_id: The group Id to list discoverable datasets.
   :param timeout: The HTTP timeout being used by the `KiotaRequestAdapter`. Default is 1 week (60s * 60m * 24h * 7d).
       When no timeout is specified or set to None then there is no HTTP timeout on each request.
   :param proxies: A dict defining the HTTP proxies to be used (default is None).
   :param api_version: The API version of the Microsoft Graph API to be used (default is v1).
       You can pass an enum named APIVersion which has 2 possible members v1 and beta,
       or you can pass a string as `v1.0` or `beta`.


   .. py:attribute:: hook


   .. py:attribute:: timeout
      :value: 604800



   .. py:attribute:: group_id


   .. py:attribute:: dataset_ids
      :value: None



   .. py:method:: serialize()

      Serialize the trigger instance.



   .. py:property:: conn_id
      :type: str



   .. py:property:: proxies
      :type: dict | None



   .. py:property:: api_version
      :type: msgraph_core.APIVersion | str



   .. py:method:: run()
      :async:


      Make async connection to the PowerBI and polls for the list of dataset IDs.



